--- a/NubeBooks/Views/Admin/Categoria.cshtml
+++ b/NubeBooks/Views/Admin/Categoria.cshtml
@@ -105,7 +105,7 @@ else { cadena = "Actualizar"; }
                                 <label>Estado</label>
                                 <div>
                                     <label class="i-switch m-t-xs m-r">
-                                        <input id="Estado" name="Estado" type="checkbox" value="@Model.Estado" checked="@Model.Estado" onchange="cb=$(this);cb.val(cb.prop('checked'));">
+                                        <input id="Estado" name="Estado" type="checkbox" value="@(Model.Estado ? "true" : "false")" checked="@Model.Estado" onchange="cb=$(this);cb.val(cb.prop('checked'));">
                                         <i></i>
                                     </label>
                                 </div>
