--- a/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
@@ -127,11 +127,11 @@
                                 <td class="text-center" style=@(item.Ejecutado ? "color:#8EC100;" : "color:red;")>@(item.Ejecutado ? "R" : "P" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "eye"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Detalle"; }
                                 <td class="text-center">
-                                    <a href="@Url.Action("Comprobante", "Admin", new { id = item.IdComprobante })"><i class="fa fa-@rIcon" title="@rTitle"></i></a>&nbsp;
+                                    <a href="@Url.Action("Comprobante", "Admin", new { id = item.IdComprobante })"><i class="fa fa-@rIcon" title="@rTitle"></i>&nbsp;&nbsp;</a>
                                     @if (!ViewBag.EsUsuarioExterno)
                                     {
-                                        <a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form2" data-id="@item.IdComprobante" data-nro="@item.NroDocumento" data-doc="@item.NombreTipoDocumento"><i class="fa icon-check" title="Restablecer"></i>&nbsp;</a>
-                                        <a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@item.IdComprobante" data-nro="@item.NroDocumento" data-doc="@item.NombreTipoDocumento"><i class="fa fa-times" title="Eliminar"></i></a>
+                                        <a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form2" data-id="@item.IdComprobante" data-nro="@item.NroDocumento" data-doc="@item.NombreTipoDocumento"><i class="fa fa-undo" title="Restablecer"></i>&nbsp;&nbsp;</a>
+                                        <a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@item.IdComprobante" data-nro="@item.NroDocumento" data-doc="@item.NombreTipoDocumento"><i class="fa fa-trash" title="Eliminar"></i></a>
                                     }
                                 </td>
                             </tr>
