--- a/NubeBooks/Views/Admin/Libro.cshtml
+++ b/NubeBooks/Views/Admin/Libro.cshtml
@@ -161,6 +161,27 @@ else { cadena = "Actualizar"; }
                         </div>
                     </div>
                 }
+                if (ViewBag.EsAdmin && Model != null && Model.IdCuentaBancaria > 0)
+                {
+                    <div class="line line-dashed line-lg pull-in"></div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <label>Estado</label>
+                                <div>
+                                    <label class="i-switch m-t-xs m-r">
+                                        <input id="Estado" name="Estado" type="checkbox" value="@(Model.Estado ? "true" : "false")" checked="@Model.Estado" onchange="cb=$(this);cb.val(cb.prop('checked'));">
+                                        <i></i>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    @Html.TextBoxFor(u => u.Estado, new { @value = Model != null ? Model.Estado : true, @type = "hidden" })
+                }
                 <div class="line line-dashed b-b line-lg pull-in"></div>
                 <div class="form-group">
                     @Html.TextBoxFor(u => u.IdEmpresa, new { @value = Model.IdEmpresa, @type = "hidden" })
@@ -251,7 +272,7 @@ else { cadena = "Actualizar"; }
                                     <td class="text-center" width="7%">
                                         <a href="@Url.Action("Movimiento", new { id = obj.IdMovimiento, idLibro = Model.IdCuentaBancaria })"><i class="fa fa-@rIcon" title="@rTitle"></i></a>&nbsp;
                                         @if (!ViewBag.EsUsuarioExterno)
-                                        {<a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@obj.IdMovimiento" data-cuenta="@obj.IdCuentaBancaria" data-nro="@obj.NroOperacion"><i class="fa fa-times" title="Eliminar"></i></a>}
+                                        {<a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@obj.IdMovimiento" data-cuenta="@obj.IdCuentaBancaria" data-nro="@obj.NroOperacion"><i class="fa fa-trash" title="Eliminar"></i></a>}
                                     </td>
                                 </tr>
                                             }
