--- a/NubeBooks/Views/Admin/Periodos.cshtml
+++ b/NubeBooks/Views/Admin/Periodos.cshtml
@@ -3,6 +3,13 @@
 @{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml"; 
 }
+@section scripts{
+    <script type="text/javascript">
+        function handleClick(element) {
+            window.location.href = '@Url.Action("Periodos", "Admin")' + "?inactivos=" + element.checked;
+        }
+    </script>
+}
 <div class="bg-light lter b-b wrapper-md">
     @*<button class="btn m-b-xs btn-sm btn-info btn-addon pull-right m-l"><i class="fa fa-cloud-download"></i>Exportar</button>*@
     <a href="@Url.Action("Periodo")" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>
@@ -58,5 +65,10 @@
                 </tbody>
             </table>
         </div>
+    </div>
+    <div class="checkbox">
+        <label class="i-checks">
+            <input type="checkbox" value="@(ViewBag.vbInactivos == true ? "true" : "false")" checked="@ViewBag.vbInactivos" onclick="handleClick(this);"><i></i> Mostrar Inactivos
+        </label>
     </div>
 </div>
