--- a/NubeBooks/Views/Admin/ComprobantesEgreso.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesEgreso.cshtml
@@ -104,10 +104,10 @@
 }" class="table table-striped b-t b-b dataTable">
                 <thead>
                     <tr>
-                        <th class="text-center" style="width:10%">Fecha</th>
-                        <th class="text-center" style="width:20%">Documento</th>
-                        <th class="text-center" style="width:10%">Número</th>
-                        <th class="text-center" style="width:25%">Proveedor</th>
+                        <th style="width:10%">Fecha</th>
+                        <th style="width:10%">Documento</th>
+                        <th style="width:10%">Número</th>
+                        <th style="width:35%">Proveedor</th>
                         <th class="text-center" style="width:10%">Monto</th>
                         <th class="text-center" style="width:5%">Estado</th>
                         <th class="text-center" style="width:10%">Opc.</th>
@@ -119,14 +119,14 @@
                         foreach (var item in Model)
                         {
                             <tr>
-                                <td class="text-center">@item.FechaEmision.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
-                                <td class="text-center">@item.NombreTipoDocumento</td>
-                                <td class="text-center">@item.NroDocumento</td>
-                                <td class="text-center">@item.NombreEntidad</td>
+                                <td>@item.FechaEmision.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
+                                <td>@item.NombreTipoDocumento</td>
+                                <td>@item.NroDocumento</td>
+                                <td>@item.NombreEntidad</td>
                                 <td class="text-right">@item.SimboloMoneda @item.Monto.ToString("N2", CultureInfo.InvariantCulture)</td>
                                 <td class="text-center" style=@(item.Ejecutado ? "color:#8EC100;" : "color:red;")>@(item.Ejecutado ? "R" : "P" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
-                                <td class="text-center">
+                                <td class="text-right">
                                     <a href="@Url.Action("Comprobante", "Admin", new { id = item.IdComprobante })"><i class="fa fa-@rIcon" title="@rTitle"></i>&nbsp;&nbsp;</a>
                                     @if (!ViewBag.EsUsuarioExterno)
                                     {
