--- a/NubeBooks/Views/Admin/Item.cshtml
+++ b/NubeBooks/Views/Admin/Item.cshtml
@@ -67,6 +67,27 @@ else { cadena = "Actualizar"; }
                         </div>
                     </div>
                 </div>
+                if (ViewBag.EsAdmin && Model != null && Model.IdItem > 0)
+                {
+                    <div class="line line-dashed line-lg pull-in"></div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <label>Estado</label>
+                                <div>
+                                    <label class="i-switch m-t-xs m-r">
+                                        <input id="Estado" name="Estado" type="checkbox" value="@(Model.Estado ? "true" : "false")" checked="@Model.Estado" onchange="cb=$(this);cb.val(cb.prop('checked'));">
+                                        <i></i>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    @Html.TextBoxFor(u => u.Estado, new { @value = Model != null ? Model.Estado : true, @type = "hidden" })
+                }
                 <div class="line line-dashed b-b line-lg pull-in"></div>
                 <div class="form-group">
                     @Html.TextBoxFor(u => u.IdItem, new { @value = Model.IdItem != 0 ? Model.IdItem.ToString() : "", @type = "hidden" })
