--- a/NubeBooks/Views/Admin/LibrosAdministrativos.cshtml
+++ b/NubeBooks/Views/Admin/LibrosAdministrativos.cshtml
@@ -23,6 +23,10 @@
 
             return "/Admin/ExportarLibros/?idTipoCuenta=2&" + "FechaInicio=" + encodeURIComponent(FechaInicio) + "&" + "FechaFin=" + encodeURIComponent(FechaFin);
         }
+
+        function handleClick(element) {
+            window.location.href = '@Url.Action("LibrosAdministrativos", "Admin")' + "?inactivos=" + element.checked;
+        }
     </script>
 }
 
@@ -82,6 +86,11 @@
                 </tbody>
             </table>
         </div>
+    </div>
+    <div class="checkbox">
+        <label class="i-checks">
+            <input type="checkbox" value="@(ViewBag.vbInactivos == true ? "true" : "false")" checked="@ViewBag.vbInactivos" onclick="handleClick(this);"><i></i> Mostrar Inactivos
+        </label>
     </div>
 </div>
 
