--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -429,7 +429,7 @@
         <footer id="footer" class="app-footer" role="footer">
             <div class="wrapper b-t bg-light">
                 <span class="pull-right"><a href="#" ui-scroll="app" class="m-l-sm text-muted"><i class="fa fa-long-arrow-up"></i></a></span>
-                &copy; 2016 Copyright.
+                &copy; @(System.DateTime.Now.Year) Copyright.
             </div>
         </footer>
     </div>
