--- a/NubeBooks/Views/Admin/Comprobante.cshtml
+++ b/NubeBooks/Views/Admin/Comprobante.cshtml
@@ -236,7 +236,7 @@
                 strTitulo = "Ingreso";
                 strFechaIni = "Fecha Facturación";
                 strEntidad = "Cliente";
-                strFechaFin = "Cobranza";
+                strFechaFin = "Estimada de Cobranza";
                 break;
             case 2:
                 strTitulo = "Egreso";
