--- a/NubeBooks/Views/Admin/Items.cshtml
+++ b/NubeBooks/Views/Admin/Items.cshtml
@@ -64,7 +64,7 @@
                                 <td class="text-center">
                                     <a href="@Url.Action("Item", "Admin", new { id = item.IdItem })"><i class="fa fa-@rIcon" title="@rTitle"></i></a>&nbsp;
                                     @if (!ViewBag.EsUsuarioExterno)
-                                    {<a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@item.IdItem"><i class="fa fa-times" title="Eliminar"></i></a>}
+                                    {<a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@item.IdItem"><i class="fa fa-trash" title="Eliminar"></i></a>}
                                 </td>
                             </tr>
                                         }
