--- a/NubeBooks/Views/Admin/Ubicacion.cshtml
+++ b/NubeBooks/Views/Admin/Ubicacion.cshtml
@@ -22,6 +22,27 @@ else { cadena = "Actualizar"; }
                     @Html.TextBoxFor(u => u.Nombre, new { @class = "form-control", @placeholder = "Ingrese la ubicación", @type = "text", autofocus = "" })
                     @Html.ValidationMessageFor(u => u.Nombre, "", new { @style = "color:red;" })
                 </div>
+                if (ViewBag.EsAdmin && Model != null && Model.IdUbicacion > 0)
+                {
+                    <div class="line line-dashed line-lg pull-in"></div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <label>Estado</label>
+                                <div>
+                                    <label class="i-switch m-t-xs m-r">
+                                        <input id="Estado" name="Estado" type="checkbox" value="@(Model.Estado ? "true" : "false")" checked="@Model.Estado" onchange="cb=$(this);cb.val(cb.prop('checked'));">
+                                        <i></i>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+                else
+                {
+                    @Html.TextBoxFor(u => u.Estado, new { @value = Model != null ? Model.Estado : false, @type = "hidden" })
+                }
                 <div class="line line-dashed b-b line-lg pull-in"></div>
                 @Html.TextBoxFor(u => u.IdUbicacion, new { @value = Model.IdUbicacion != 0 ? Model.IdUbicacion.ToString() : "", @type = "hidden" })
                 @Html.TextBoxFor(u => u.IdEmpresa, new { @value = Model.IdEmpresa, @type = "hidden" })
