--- a/NubeBooks/Views/Admin/Ubicaciones.cshtml
+++ b/NubeBooks/Views/Admin/Ubicaciones.cshtml
@@ -56,8 +56,8 @@
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
                                 <td class="text-center">
                                     <a href="@Url.Action("Ubicacion", "Admin", new { id = item.IdUbicacion })"><i class="fa fa-@rIcon" title="@rTitle"></i></a>&nbsp;
-                                    @if (!ViewBag.EsUsuarioExterno)
-                                    {<a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@item.IdUbicacion"><i class="fa fa-trash" title="Eliminar"></i></a>}
+                                    @*@if (!ViewBag.EsUsuarioExterno)
+                                    {<a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@item.IdUbicacion"><i class="fa fa-trash" title="Eliminar"></i></a>}*@
                                 </td>
                             </tr>
                                         }
