--- a/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
@@ -104,12 +104,11 @@
                     <tr>
                         <th class="text-center" style="width:10%">Fecha</th>
                         <th class="text-center" style="width:10%">Documento</th>
-                        <th class="text-center" style="width:10%">Número</th>
-                        <th class="text-center" style="width:20%">Cliente</th>
-                        <th class="text-center" style="width:10%">Monto</th>
-                        <th class="text-center" style="width:15%">Partida</th>
-                        <th class="text-center" style="width:5%">Estado</th>
-                        <th class="text-center" style="width:10%">Opc.</th>
+                        <th class="text-center" style="width:15%">Número</th>
+                        <th class="text-center" style="width:25%">Cliente</th>
+                        <th class="text-center" style="width:15%">Monto</th>
+                        <th class="text-center" style="width:7%">Estado</th>
+                        <th class="text-right" style="width:8%">Opc.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -118,15 +117,14 @@
                         foreach (var item in Model)
                         {
                             <tr>
-                                <td class="text-center">@item.FechaEmision.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
-                                <td class="text-center">@item.NombreTipoDocumento</td>
-                                <td class="text-center">@item.NroDocumento</td>
-                                <td class="text-center">@item.NombreEntidad</td>
-                                <td class="text-right">@item.Monto.ToString("N2", CultureInfo.InvariantCulture)</td>
-                                <td class="text-center">@item.NombreCategoria</td>
+                                <td class="text-left">@item.FechaEmision.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
+                                <td class="text-left">@item.NombreTipoDocumento</td>
+                                <td class="text-left">@item.NroDocumento</td>
+                                <td class="text-left">@item.NombreEntidad</td>
+                                <td class="text-right">@item.SimboloMoneda @item.Monto.ToString("N2", CultureInfo.InvariantCulture)</td>
                                 <td class="text-center" style=@(item.Ejecutado ? "color:#8EC100;" : "color:red;")>@(item.Ejecutado ? "R" : "P" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "eye"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Detalle"; }
-                                <td class="text-center">
+                                <td class="text-right">
                                     <a href="@Url.Action("Comprobante", "Admin", new { id = item.IdComprobante })"><i class="fa fa-@rIcon" title="@rTitle"></i>&nbsp;&nbsp;</a>
                                     @if (!ViewBag.EsUsuarioExterno)
                                     {
